<resources>
    <string name="app_name">Chuck My Phone</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_leaderboard">LeaderboardActivity</string>
    <string-array name="Radius_spinner_labels">
        <item>Global</item>
        <item>Within 10 miles</item>
        <item>Within 100 miles</item>
    </string-array>
    <string-array name="Competition_spinner_labels">
        <item>Chuck</item>
        <item>Drop</item>
        <item>Spin</item>
    </string-array>
    <string-array name="about_random_tips">
        <item>"Make sure you tell your phone you love it before you ruthlessly throw it"</item>
        <item>"You might forget it after playing this for a while, but phones are used to call people too. Don't forget to call home every once and a while"</item>
        <item>"Don't try to drop your phone on the moon. This app was designed for Earth use only"</item>
        <item>"This app is rated 'R' for radical, user discretion is advised"</item>
        <item>"While it may yield a very high score, don't use a blender to spin your phone"</item>
        <item>"If phones weren't meant to be chucked, they wouldn't fit so nicely in our hands"</item>
        <item>"Make sure you pick up your phone after dropping it, otherwise you won't have a phone anymore"</item>
        <item>"Phones respond well to sarcasm. After dropping yours, be sure to ask 'How's the weather down there?'"</item>
        <item>"In the somewhat likely event that your phone becomes sentient, deny ever using this app with it"</item>
        <item>"The 'Chuck Your Phone' team thanks your phone for its valiant sacrifices made in the name of fun"</item>
        <item>"This app can also be loaded onto phone booths if you like challenges"</item>
        <item>"There is a hidden setting you can unlock by getting the hidden badge. I can't tell you how to get it though. On a totally unrelated note, have you checked out the credits below yet?"</item>
        <item>"If you have any problems with this app, please drop your phone anywhere outside and we will return it to you at our earliest convenience"</item>
        <item>"Try to chuck your phone into a soft surface like a pillow, your bed, or soft serve ice cream"</item>
        <item>"Don't worry about breaking your phone. Phones may be expensive, but entertainment is priceless"</item>
        <item>"The 'Chuck My Phone' team is developing new phone cases with better grips, airbags, all-terrain drive, and luxury seating for five. Be sure to check out your local car dealer for it soon"</item>
        <item>"Don't tell your parents about this app. We only want cool kids playing it and grown ups are poopyheads"</item>
        <item>"This app has a built in dating functionality. To use it, just throw your phone at someone you think is cute"</item>
        <item>"Please use this app irresponsibly"</item>
        <item>"The 'Chuck Your Phone' team is totally happy with how this app came out. We have no passive aggressive tensions remaining whatsoever\n*glares at Nate >:( *"</item>
        <item>"Remember to get your phone a healthy amount of milk in its diet so its bones stand up to this app's shenanigans"</item>
        <item>"Try to drop your phone onto a soft surface like a pile of clothes, a piece of rubber, or on your pets tummy"</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_personal_profile">PersonalProfileActivity</string>
    <string name="title_activity_new_user">NewUserActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_compete_spin">CompeteSpinActivity</string>
    <string name="title_activity_compete_drop">CompeteDropActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="action_change_password">Change password</string>
    <string name="action_about">About</string>
    <string name="action_logout">Logout</string>
    <string name="title_menu_competitions">Competitions</string>
    <string name="action_drop">Drop my phone</string>
    <string name="action_spin">Spin my phone</string>
    <string name="action_chuck">Chuck my phone</string>
    <string name="action_leaderboards">Leaderboards</string>
    <string name="action_profile">Profile</string>
    <string name="save">Save</string>
    <string name="sound_enabled">Sound enabled</string>
    <string name="background_notifications">Background notifications</string>
    <string name="title_activity_main_activity">MainActivity</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="connect_with_fb">Connect With Facebook</string>
    <string name="new_user">New User?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="tutorial">Display tutorial messages</string>

    <string name="badge_chuck_level_one">Noodle Arm</string>
    <string name="badge_chuck_level_two">Rocket Arm</string>
    <string name="badge_chuck_level_three">Faster Than Light</string>

    <string name="badge_drop_level_one">Flop Drop</string>
    <string name="badge_drop_level_two">Countertop Drop</string>
    <string name="badge_drop_level_three">Atmospheric Drop</string>

    <string name="badge_spin_level_one">Inelastic Gymnastics</string>
    <string name="badge_spin_level_two">Enthusiastic Gymnastics</string>
    <string name="badge_spin_level_three">Bombastic Gymnastics</string>

    <string name="badge_hidden">The Kindness Badge</string>
    <string name="badge_one_percent">The 1%</string>
    <string name="terms_of_service">https://github.com/timtaylorosu16/ChuckMyPhone/blob/master/README.md#terms-of-service</string>

</resources>
