<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/action_profile"/>
        <item
            android:id="@+id/nav_leaderboards"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/action_leaderboards"/>
    </group>

    <item android:title="@string/title_menu_competitions">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_chuck"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="@string/action_chuck"/>
                <item
                    android:id="@+id/nav_drop"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="@string/action_drop"/>
                <item
                    android:id="@+id/nav_spin"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="@string/action_spin"/>
            </group>
        </menu>
    </item>
</menu>
