<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_hamburger_item_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/action_profile"/>
        <item
            android:id="@+id/menu_hamburger_item_leaderboards"
            android:icon="@drawable/ic_leaderboard"
            android:title="@string/action_leaderboards"/>
    </group>

    <item android:title="@string/title_menu_competitions">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_hamburger_item_chuck"
                    android:icon="@drawable/ic_chuck"
                    android:title="@string/action_chuck"/>
                <item
                    android:id="@+id/menu_hamburger_item_drop"
                    android:icon="@drawable/ic_drop"
                    android:title="@string/action_drop"/>
                <item
                    android:id="@+id/menu_hamburger_item_spin"
                    android:icon="@drawable/ic_spin"
                    android:title="@string/action_spin"/>
            </group>
        </menu>
    </item>
</menu>
