<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ohiostate.chuckmyphone.chuckmyphone.LoginActivity"
    tools:showIn="@layout/activity_login"
    android:id="@+id/login_linear_layout"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/login_app_icon_image_view"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:src="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/login_email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:windowSoftInputMode="adjustPan"
        android:hint="@string/email"
        android:singleLine="true"
        android:imeOptions="actionNext"/>

    <EditText
        android:id="@+id/login_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:windowSoftInputMode="adjustPan"
        android:inputType="textPassword"
        android:imeOptions="actionDone"/>

    <Button
        android:id="@+id/login_login_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login" />

    <Button
        android:id="@+id/login_new_user_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_user" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="New Text"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/login_bottom_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/editText4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.00"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/login_forgot_password_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:linksClickable="true"
            android:singleLine="true"
            android:text="@string/forgot_password"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

</LinearLayout>
